add possibility to always place buttons on the toolbar

--- a/README
+++ b/README
@@ -23,3 +23,7 @@ Config
 The default config file is plugins/samarkasjunk/config.inc.php.dist
 Rename this to plugins/samarkasjunk/config.inc.php
 All config parameters are optional
+
+Location of the button
+======================
+The spam/ham button is added to the "mark message" menu on the toolbar when viewing a mail box and to the toolbar itself when viewing a message. If you would prefer that the button be always visible on the main toolbar in both the mailbox and mail view screens then change $toolbar to true in samarkasjunk.php
