--- a/README
+++ b/README
@@ -26,4 +26,4 @@ All config parameters are optional
 
 Location of the button
 ======================
-The spam/ham button is added to the "mark message" menu on the toolbar when viewing a mail box and to the toolbar itself when viewing a message. If you would prefer that the button be always visible on the main toolbar in both the mailbox and mail view screens then change $toolbar to true in samarkasjunk.php
+The spam/ham button is added to the "mark message" menu on the toolbar when viewing a mail box and to the toolbar itself when viewing a message. If you would prefer that the button be always visible on the main toolbar in both the mailbox and mail view screens then add $rcmail_config['samarkasjunk_mb_toolbar'] = true; to your config
