--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2010 01 29
+==========
+ * Move toolbar config to config file
+
 2009 12 01
 ==========
  * CSS update after r3141
