--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2010 02 07
+==========
+ * Update after r3258
+
 2010 01 29
 ==========
  * Move toolbar config to config file
