fix flag setup after r3258

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2010 02 14
+==========
+ * Another update after r3258
+
 2010 02 07
 ==========
  * Update after r3258
