--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2010 02 23
+==========
+ * Update after r3261
+
 2010 02 14
 ==========
  * Another update after r3258
