--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2010 03 20
+==========
+ * Update to r3393
+
 2010 03 07
 ==========
  * Better toolbar icons
