yet more cleanup

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Roundcube Webmail Mark as Junk 2
-================================
+Roundcube Webmail MarkAsJunk2
+=============================
 This plugin adds "mark as spam" or "mark as not spam" button to the message menu.
 
 When not in the Junk mailbox:
