--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Roundcube Webmail MarkAsJunk2
 This plugin adds "mark as spam" or "mark as not spam" button to the message
 menu.
 Inspiration for this plugin was taken from:
-Thomas Bruederli <roundcube@gmail.com> - original RoundCube Mark As Junk plugin
+Thomas Bruederli <roundcube@gmail.com> - original Roundcube Mark As Junk plugin
 
 When not in the Junk mailbox:
   Messages are moved into the Junk mailbox and marked as read
@@ -28,8 +28,8 @@ folder for details on the skin license.
 
 Install
 =======
-* Place this plugin folder into plugins directory of RoundCube
-* Add markasjunk2 to $rcmail_config['plugins'] in your RoundCube config
+* Place this plugin folder into plugins directory of Roundcube
+* Add markasjunk2 to $rcmail_config['plugins'] in your Roundcube config
 NB: When downloading the plugin from GitHub you will need to create a directory
 called markasjunk2 and place the files in there, ignoring the root directory in
 the downloaded archive.
