--- a/README
+++ b/README
@@ -10,9 +10,7 @@ When not in the Junk mailbox:
 
 When in the Junk mailbox:
   The buttons are changed to "mark as not spam" or "this message is not spam"
-  If the message is a spam report with the original email attached then this is
-  detached and saved in the Inbox, the spam report is deleted
-  If it is not a spam report then the message is simply moved to the Inbox
+  and the message is moved to the Inbox
 
 This plugin also integrates with the ContextMenu plugin
 
@@ -51,7 +49,7 @@ learn_spam: This function should take 1 argument, the UID of message being
 learn_ham: This function should take 1 argument, the UID of message being
            marked as ham
 
-Three drivers are provided by default they are:
+Five drivers are provided by default they are:
 
 cmd_learn: This driver calls an external command (for example salearn) to
            process the message
@@ -65,6 +63,10 @@ email_learn: This driver emails the message either as an attachment or directly
 sa_blacklist: This driver adds the sender address of a spam message to the
               users blacklist (or whitelist of ham messages)
               Requires SAUserPrefs plugin
+
+sa_detach: If the message is a Spamassassin spam report with the original email
+           attached then this is detached and saved in the Inbox, the spam
+           report is deleted
 
 Spam learning commands
 ======================
