--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+2012 03 03
+==========
+ * Fixed drivers namespace issues
+
 2012 01 21
 ==========
  * Update after r5781
