--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.6 (2013-03-03, rc-0.9)
+=================================================
  * merge PDO branch (de56ea1909)
  * rename default skin to classic (c40419bdfe)
  * add new edit_headers driver
