--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,11 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.7 (2013-05-193, rc-1.0)
+=================================================
  * add option to call markasjunk2 functions on message move
  * rcmail_deliver_message() > deliver_message()
+ **** code branching/tagging no longer sync'd to roundcube versions ****
 
 Version 1.6 (2013-03-03, rc-0.9)
 =================================================
