--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,15 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.8 (2013-12-01, rc-1.0)
+=================================================
+ * Use sauserprefs_userid config setting in sa_blacklist driver
  * Use plugin API to set message flags (05da157)
  * Update config file var names to match core
  * Add support for global sql_debug option
  * Improve handling of multiple marcos in cmd_learn driver
 
-Version 1.7 (2013-05-193, rc-1.0)
+Version 1.7 (2013-05-19, rc-1.0)
 =================================================
  * add option to call markasjunk2 functions on message move
  * rcmail_deliver_message() > deliver_message()
