drop ie6 support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Roundcube Webmail MarkAsJunk2
 =============================
 
  * Support multi-folder search results (66536974fe)
+ * Drop IE6 support
 
 Version 1.8.2 (2014-03-30, rc-1.0)
 =================================================
