--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.9 (2015-01-06, rc-1.1)
+=================================================
  * Use get_part_body add in 48ba4414b3
  * Support multi-folder search results (66536974fe)
  * Drop IE6 support
