--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.11 (2017-06-14, rc-1.3)
+=================================================
  * "Flattened" the larry theme: fresher look by removing shadows and gradients
 
 Version 1.10 (2017-01-02, rc-1.1)
