--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+ * Fix icon display on message view screen
+
 Version 1.11 (2017-06-14, rc-1.3)
 =================================================
  * "Flattened" the larry theme: fresher look by removing shadows and gradients
