--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.11.1 (2017-07-29, rc-1.3)
+=================================================
  * Fix icon display on message view screen
 
 Version 1.11 (2017-06-14, rc-1.3)
